<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home">
    <View
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/shadow"
        >
    </View>

    <RelativeLayout
        android:layout_width="405dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_side_menu"
            android:contentDescription="@string/menu" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="300dp"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notif" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="300dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/propil"
            android:src="@drawable/propil" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="92dp"
        android:layout_marginTop="160dp"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:text="@string/nama"
            android:textColor="#43b3e6"
            android:textSize="18sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="135dp"
            android:text="@string/blood2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="70dp"
            android:layout_height="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#f2f2f2"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="30dp"
        android:layout_marginTop="250dp"
        >

        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:text="@string/noblood1"
            android:textColor="#43b3e6"
            android:textSize="24sp" />
        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="160dp"
            android:textColor="#43b3e6"
            android:textSize="24sp"
            android:text="@string/noblood2"
            />
        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="260dp"
            android:textColor="#43b3e6"
            android:textSize="24sp"
            android:text="@string/noblood3"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="35dp"
        android:layout_marginTop="280dp">
        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:textSize="12sp"
            android:textColor="#939597"
            android:text="@string/descblood1"
            />

        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:textSize="12sp"
            android:textColor="#939597"
            android:text="@string/descblood2"
            />

        <TextView
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:layout_marginStart="255dp"
            android:textSize="12sp"
            android:textColor="#939597"
            android:text="@string/descblood3"
            />
        <EditText
            android:layout_width="410dp"
            android:layout_marginTop="15dp"
            android:layout_height="70dp"
            android:backgroundTint="#f2f2f2"
            android:layout_marginEnd="50dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:layout_marginTop="320dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:drawableTop="@drawable/ic_search_donor"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/icon1"
            android:textSize="12sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="190dp"
            android:drawableTop="@drawable/ic_blood_needed"
            android:gravity="center"
            android:text="@string/icon2"
            android:textSize="12sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:layout_marginTop="470dp"

        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:drawableTop="@drawable/ic_message"
            android:gravity="center"
            android:text="@string/icon3"
            android:textSize="12sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="190dp"
            android:drawableTop="@drawable/ic_donor_history"
            android:gravity="center"
            android:text="@string/icon4"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>