<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B4E7"
    tools:context=".verify"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="200dp">
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="#ffff"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="12sp" />
        
        <EditText
            android:id="@+id/verif"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#ffffff"
            android:textColor="#ffff"
            android:labelFor="@+id/verif"
            android:text="@string/enter"
            android:autofillHints=""

            android:inputType="" tools:targetApi="o"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_verify"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:text="@string/sent"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/resend"
            android:textColor="#ffff"
            />

    </LinearLayout>
</LinearLayout>