<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B4E7"
    android:orientation="vertical"
    tools:context=".almost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="83dp"
            android:paddingBottom="10dp"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:text="@string/almost"
            />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:textColor="#ffff"
            android:text="@string/thank"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/button_almost"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:text="@string/veri"
            android:background="@drawable/button_style" />
    </LinearLayout>


</LinearLayout>


